<resources>
    <string name="app_name">GuitarApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="nav_title_artists">Artists</string>
    <string name="nav_title_songs">Songs</string>
    <string name="nav_title_favorites">Favorites</string>
    <string name="nav_title_settings">Settings</string>
    <string name="nav_title_about">About</string>

    <string name="tab_title_recent">Recent</string>
    <string name="tab_title_popular">Popular</string>
</resources>
