<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/nav_group_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_artists"
            android:icon="@drawable/ic_menu_artists"
            android:title="@string/nav_title_artists" />
        <item
            android:id="@+id/nav_songs"
            android:icon="@drawable/ic_menu_songs"
            android:title="@string/nav_title_songs" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_menu_favorites"
            android:title="@string/nav_title_favorites" />
    </group>

    <group
        android:id="@+id/nav_group_bottom"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_title_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/nav_title_about" />
    </group>
</menu>
